Added bottleneck calc and google login

--- a/public/bottleneck.html
+++ b/public/bottleneck.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>PC Recommendations</title>
+        <title>Bottleneck Calculator</title>
         <link rel="stylesheet" href="styles.css" />
     </head>
     <body>
@@ -18,10 +18,10 @@
             </ul>
         </div>
         <div class="container">
-            <h1>Your PC Recommendations</h1>
-            <div class="card-container" id="recommendations"></div>
-            <a href="index.html">Back to Form</a>
+            <h1>Bottleneck Calculator</h1>
+            <div id="bottleneckResult"></div>
+            <a href="recommendation.html">Back to Recommendations</a>
         </div>
-        <script src="recommendation.js"></script>
+        <script src="bottleneck.js"></script>
     </body>
 </html>
