design commit final 1

--- a/public/login.html
+++ b/public/login.html
@@ -1,33 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Login & Signup</title>
-        <link rel="stylesheet" href="login.css" />
-        <script
-            src="https://accounts.google.com/gsi/client"
-            async
-            defer
-        ></script>
-        <script src="https://cdn.jsdelivr.net/npm/jwt-decode/build/jwt-decode.min.js"></script>
-    </head>
-    <body>
-        <div class="auth-container">
-            <div class="auth-box">
-                <h2 id="form-title">Login</h2>
-                <div
-                    id="g_id_onload"
-                    data-client_id="750495630078-in3i6ifq5g8tfgirmgu03gosh0gtb8cb.apps.googleusercontent.com"
-                    data-context="signin"
-                    data-ux_mode="popup"
-                    data-callback="handleCredentialResponse"
-                    data-auto_prompt="false"
-                ></div>
-                <div class="g_id_signin" data-type="standard"></div>
-            </div>
-        </div>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login & Signup</title>
+    <link rel="stylesheet" href="login.css">
+</head>
+<body>
+    <div class="auth-container">
+        <div class="auth-box">
+            <h2 id="form-title">Login</h2>
+            
+            <form id="auth-form">
+                <div class="input-group">
+                    <input type="text" id="username" required>
+                    <label>Username</label>
+                </div>
+                <div class="input-group">
+                    <input type="password" id="password" required>
+                    <label>Password</label>
+                </div>
+                <button type="submit" class="cta-btn">Login</button>
 
-        <script src="login.js"></script>
-    </body>
+                <div class="divider">OR</div>
+                <button type="button" class="google-btn">Sign in with Google</button>
+
+                <p class="toggle-text">
+                    Don't have an account? <span id="toggle-link">Sign Up</span>
+                </p>
+            </form>
+        </div>
+    </div>
+    
+    <script src="login.js"></script>
+</body>
 </html>
