--- a/public/index.html
+++ b/public/index.html
@@ -8,12 +8,14 @@
         <link rel="stylesheet" href="styles.css" />
     </head>
     <body>
+ 
+        <div class="hover-area"></div>
         <div class="sidebar">
             <ul>
                 <li><a href="#requirements">Requirements</a></li>
                 <li><a href="recommendation.html">Recommendation</a></li>
                 <li><a href="bottleneck.html">Bottleneck Calculator</a></li>
-                <li><a href="#benchmark">Benchmark and Performance</a></li>
+                <li><a href="#benchmark">Benchmark&Performance</a></li>
                 <li><a href="#game-building">Game Based Building</a></li>
                 <li><a href="#ai-assistant">AI Assistant</a></li>
             </ul>
