--- a/public/recommendation.html
+++ b/public/recommendation.html
@@ -7,19 +7,20 @@
         <link rel="stylesheet" href="styles.css" />
     </head>
     <body>
+        <div class="hover-area"></div>
         <div class="sidebar">
             <ul>
-                <li><a href="index.html">Requirements</a></li>
+                <li><a href="#requirements">Requirements</a></li>
                 <li><a href="recommendation.html">Recommendation</a></li>
                 <li><a href="bottleneck.html">Bottleneck Calculator</a></li>
-                <li><a href="#benchmark">Benchmark and Performance</a></li>
+                <li><a href="#benchmark">Benchmark&Performance</a></li>
                 <li><a href="#game-building">Game Based Building</a></li>
                 <li><a href="#ai-assistant">AI Assistant</a></li>
             </ul>
         </div>
         <div class="container">
             <h1>Your PC Recommendations</h1>
-            <div class="card-container" id="recommendations"></div>
+            <div id="recommendations"></div>
             <a href="index.html">Back to Form</a>
         </div>
         <script src="recommendation.js"></script>
