--- a/public/bottleneck.html
+++ b/public/bottleneck.html
@@ -15,7 +15,7 @@
                 <li><a href="bottleneck.html">Bottleneck Calculator</a></li>
                 <li><a href="#benchmark">Benchmark&Performance</a></li>
                 <li><a href="#game-building">Game Based Building</a></li>
-                <li><a href="#ai-assistant">AI Assistant</a></li>
+                <li><a href="chat.html">AI Assistant</a></li>
             </ul>
         </div>
         <div class="container">
