--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
                 <li><a href="bottleneck.html">Bottleneck Calculator</a></li>
                 <li><a href="#benchmark">Benchmark&Performance</a></li>
                 <li><a href="#game-building">Game Based Building</a></li>
-                <li><a href="#ai-assistant">AI Assistant</a></li>
+                <li><a href="chat.html">AI Assistant</a></li>
             </ul>
         </div>
         <div class="container">
@@ -124,7 +124,7 @@
             <!-- Chatbot Section -->
             <div class="chatbot-section">
                 <p>Need help? Chat with our assistant!</p>
-                <button class="chatbot-button" onclick="startChatbot()">
+                <button class="chatbot-button" onclick="window.location.href='/chat.html'">
                     Chat Now
                 </button>
             </div>
