--- a/public/chat.html
+++ b/public/chat.html
@@ -1,64 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chatbot</title>
-    <link rel="stylesheet" href="chatstyles.css">
-</head>
-<body>
-    <div class="chat-container">
-        <div class="chat-box" id="chat-box"></div>
-        <div class="chat-input-container">
-            <input type="text" id="chat-input" placeholder="Type a message...">
-            <button id="send-btn">Send</button>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Chat</title>
+        <link rel="stylesheet" href="chatstyles.css" />
+    </head>
+    <body>
+        <div class="hover-area"></div>
+        <div class="sidebar">
+            <ul>
+                <li><a href="index.html">Requirements</a></li>
+                <li><a href="recommendation.html">Recommendation</a></li>
+                <li><a href="bottleneck.html">Bottleneck Calculator</a></li>
+                <li><a href="benchmark.html">Benchmark&Performance</a></li>
+                <li><a href="#game-building">Game Based Building</a></li>
+                <li><a href="chat.html">AI Assistant</a></li>
+            </ul>
         </div>
-    </div>
-    <script>
-        const GEMINI_PROXY_URL = "/api/chat"; // Ensure this matches the server route
+        <div id="particles-js"></div>
+        <div class="chat-container">
+            <div class="chat-header">
+                <h1>Chat Assistant</h1>
+            </div>
+            <div id="chat-box" class="chat-box"></div>
+            <div class="chat-input-container">
+                <form id="chat-form">
+                    <input
+                        type="text"
+                        id="chat-input"
+                        placeholder="Type your message..."
+                        required
+                    />
+                    <button id="send-btn" type="submit">Send</button>
+                </form>
+            </div>
+        </div>
+        <script>
+            document
+                .getElementById("chat-form")
+                .addEventListener("submit", async (e) => {
+                    e.preventDefault();
 
-        document.getElementById("send-btn").addEventListener("click", sendMessage);
-        document.getElementById("chat-input").addEventListener("keypress", function(event) {
-            if (event.key === "Enter") sendMessage();
-        });
+                    const input = document.getElementById("chat-input");
+                    const message = input.value.trim();
+                    if (!message) return;
 
-        async function sendMessage() {
-            let inputField = document.getElementById("chat-input");
-            let message = inputField.value.trim();
-            
-            if (!message) return;
-            
-            addMessage("user", message);
-            inputField.value = "";
+                    const chatBox = document.getElementById("chat-box");
+                    chatBox.innerHTML += `<div class="chat-message user-message">${message}</div>`;
 
-            try {
-                const response = await fetch(GEMINI_PROXY_URL, {
-                    method: "POST",
-                    headers: { "Content-Type": "application/json" },
-                    body: JSON.stringify({ prompt: message })
+                    try {
+                        const response = await fetch("/chat", {
+                            method: "POST",
+                            headers: {
+                                "Content-Type": "application/json",
+                            },
+                            body: JSON.stringify({ message }),
+                        });
+
+                        const data = await response.json();
+                        if (data.result === "success") {
+                            chatBox.innerHTML += `<div class="chat-message bot-message">${data.response}</div>`;
+                        } else {
+                            chatBox.innerHTML += `<div class="chat-message error-message">Error: ${data.message}</div>`;
+                        }
+                    } catch (error) {
+                        console.error("Error sending message:", error);
+                        chatBox.innerHTML += `<div class="chat-message error-message">Error sending message. Please try again later.</div>`;
+                    }
+
+                    input.value = "";
+                    chatBox.scrollTop = chatBox.scrollHeight; // Auto-scroll to the latest message
                 });
-
-                if (!response.ok) {
-                    const errorText = await response.text();
-                    throw new Error(`API Error: ${response.status} ${response.statusText} - ${errorText}`);
-                }
-
-                const data = await response.json();
-                addMessage("bot", data.response || "Sorry, I couldn't understand that.");
-            } catch (error) {
-                console.error("Error fetching response:", error);
-                addMessage("bot", "The server encountered an issue. Please try again later.");
-            }
-        }
-
-        function addMessage(sender, text) {
-            let chatBox = document.getElementById("chat-box");
-            let messageDiv = document.createElement("div");
-            messageDiv.classList.add("chat-message", sender === "user" ? "user-message" : "bot-message");
-            messageDiv.innerText = text;
-            chatBox.appendChild(messageDiv);
-            chatBox.scrollTop = chatBox.scrollHeight;
-        }
-    </script>
-</body>
+        </script>
+        <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+        <script src="particles-config.js"></script>
+    </body>
 </html>
