--- a/public/index.html
+++ b/public/index.html
@@ -8,14 +8,14 @@
         <link rel="stylesheet" href="styles.css" />
     </head>
     <body>
- 
+        <div id="particles-js"></div>
         <div class="hover-area"></div>
         <div class="sidebar">
             <ul>
-                <li><a href="#requirements">Requirements</a></li>
+                <li><a href="index.html">Requirements</a></li>
                 <li><a href="recommendation.html">Recommendation</a></li>
                 <li><a href="bottleneck.html">Bottleneck Calculator</a></li>
-                <li><a href="#benchmark">Benchmark&Performance</a></li>
+                <li><a href="benchmark.html">Benchmark&Performance</a></li>
                 <li><a href="#game-building">Game Based Building</a></li>
                 <li><a href="chat.html">AI Assistant</a></li>
             </ul>
@@ -124,7 +124,7 @@
             <!-- Chatbot Section -->
             <div class="chatbot-section">
                 <p>Need help? Chat with our assistant!</p>
-                <button class="chatbot-button" onclick="window.location.href='/chat.html'">
+                <button class="chatbot-button" onclick="startChatbot()">
                     Chat Now
                 </button>
             </div>
@@ -137,5 +137,8 @@
                 ).textContent = `₹${value}`;
             }
         </script>
+
+<script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+<script src="particles-config.js"></script>
     </body>
 </html>
